@@ -391,8 +391,10 @@ module Mail
   end
 end
 
-module ActiveSupport
-  unless const_defined?(:Multibyte)
-    Multibyte = Mail::Multibyte
+unless defined?(ActiveSupport)
+  module ActiveSupport
+    unless const_defined?(:Multibyte)
+      Multibyte = Mail::Multibyte
+    end
   end
 end
